--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,16 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.ontop {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  left: 0;
+  z-index: 100;
 }
 
-.menu:before {
-  content: "[";
+.searchboxrow {
+  width: 100%;
+  text-align: center;
 }
 
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.searchbox {
+  border-radius: 10px;
 }
